Modification apportée sur la page de garde, l'introduction, l'abstract, le resume et l'introduction

--- a/main_thesis.tex
+++ b/main_thesis.tex
@@ -6,16 +6,16 @@
 
 \author{MBAIGOLMEM DANG-DANG THIERY \thanks{dev.thiery.dangdang@gmail.com}}
 
-% Matriculation Number
-\id{20A179FS}
+% % Matriculation Number
+% \id{20A179FS}
 
-% Field of Study
-\field{Ing\'enerie Informatique}
+% % Field of Study
+% \field{Ing\'enerie Informatique}
 
-% Address, for declarations at the end of the thesis.
-\city{Université de Ngaoundéré}
+% % Address, for declarations at the end of the thesis.
+% \city{Université de Ngaoundéré}
 
-\professor{Prof. Dr. Ing. FENDJI JEAN LOUIS KEDIENG EBONGUE}
+% \professor{Prof. Dr. Ing. FENDJI JEAN LOUIS KEDIENG EBONGUE}
 
 % \supervisor{Supervisor, Pr Dr BOUKAR}
 
@@ -27,12 +27,12 @@
 \listoffigures
 \listoftables
 
-\input{content/01-introduction}
-\input{content/review}
-\input{content/02-chapter1}
-\input{content/03-chapter2}
-\input{content/04-chapter3}
-\input{content/10-conclusion}
+\input{content/01-introduction} %% Ok Ici
+\input{content/review} 			%% Ok Ici
+\input{content/02-chapter1}		%% Ok Ici
+\input{content/03-chapter2}		%% Ok Ici
+\input{content/04-chapter3}		%% Ok Ici
+\input{content/10-conclusion} %% <- Probleme
 
 \begin{appendix}
 	\input{content/99-appendix}
@@ -51,6 +51,5 @@
 	\frenchDeclaration
 
 \end{backmatter}
-==============================================
 
 \end{document}
