--- a/content/dedicace.tex
+++ b/content/dedicace.tex
@@ -1,7 +1,6 @@
 \chapter*{DEDICACE}\addcontentsline{toc}{chapter}{Dédicace}
 \vspace*{7cm}
 \begin{cursive}
-
-{\Huge \bfseries  Je dédie ce travail à ma famille avec tous mes sentiments de respect, d'amour, de gratitude et de
-	reconnaissance.}
+	{\Huge Je dédie ce travail à ma famille avec tous mes sentiments de respect, d'amour, de gratitude et de
+		reconnaissance.}
 \end{cursive}
