--- a/content/remerciement.tex
+++ b/content/remerciement.tex
@@ -1,27 +1,19 @@
 \chapter*{REMERCIEMENTS}\addcontentsline{toc}{chapter}{Remerciements}
-La production de ce mémoire a nécessité beaucoup d’énergies et du temps. J’aimerais remercier ici tous ceux qui de près ou de loin ont contribué et ont donné de leur temps pour que mon étude soit menée à bien. Tout d'abord je rends gr\^ace au Seigneur Dieu tout puissant qui m'accorde tous les jours non seulement le souffle de vie, mais intelligence et sagesse pour accomplir des \oe uvres au quotidien. \\
+La production de ce mémoire a nécessité beaucoup d’énergies et du temps. J’aimerais remercier ici tous ceux qui de près ou de loin ont contribué et ont donné de leur temps pour que mon étude soit menée à bien. Tout d'abord je rends gr\^ace au Seigneur Dieu Tout Puissant qui m'accorde tous les jours non seulement le souffle de vie, mais l'intelligence et la sagesse pour accomplir des \oe uvres au quotidien. \\
 Nos remerciements  vont aussi précisément à l'endroit du:
 \begin{itemize}
 	\item  Recteur de l'Université de Ngaoundéré,  {\footnotesize\bfseries Pr MAMOUDOU Abdoulmoumini} , qui a rendu possible notre étude en Master 2;
 	\item  Doyen de la Faculté des Sciences de l'Université de Ngaoundéré, {\footnotesize\bfseries Pr DJONKA Dieudonné}, pour avoir organisé nos études tout en préservant la discipline;
 	\item Chef de département de Mathématiques et Informatique,  { \footnotesize\bfseries Pr.Dr.Ing. DAYANG Paul}, pour l'accompagnement et l'orientation donnée à notre travail;
-	\item Directeur de ce mémoire,  {\footnotesize\bfseries Dr  MBOUNJA BESSEME  Fritz}, qui nous a accompagnés et encadrés pendant tout le temps de rédaction et a su nous guider à travers des recommandations pour la réalisation de cette étude;
-	\item Directeur de ce mémoire,  {\footnotesize\bfseries Dr  WANKAP Nono Georges} Co-directeur de ce mémoire, vos conseils et encouragements sont irremplaçables 
+	\item Directeur de ce mémoire,  {\footnotesize\bfseries Pr Dr Ing. FENDJI JEAN LOUIS KEDIENG EBONGUE}, qui nous a accompagnés et encadrés pendant tout le temps de rédaction et a su nous guider à travers des recommandations pour la réalisation de cette étude;
 \end{itemize}
 \par Ensuite, nous exprimons notre gratitude à tous les enseignants du département de mathématiques et informatique, pour
-les différents cours dispensés depuis le cycle licence, pour les orientations nécessaires à
-notre travail et pour la disponibilité dont ils ont fait preuve lorsque nous nous sommes référés à eux, plus particulièrement à:
-\begin{itemize}
-	\item { \footnotesize\bfseries Pr Elvis D. D.    HOUPA}, nous  avons eu  l’honneur du bénéfice de votre rigueur. Vous êtes un modèle pour plus d’un;
-	\item  {\footnotesize \bfseries Pr KAMGANG, Pr FOTSA, Pr TCHOUA, Dr ABOUBAKAR, Dr SIGNING, Dr KOUAKEP}, Vous avez été des sources d'inspiration pour nous gr\^ace à vos unités d'enseignement respectives.
-\end{itemize}
+les différents cours dispensés depuis le cycle licence, pour les orientations nécessaires à notre travail et pour la disponibilité dont ils ont fait preuve lorsque nous nous sommes référés à eux.
 \par Enfin, nos gratitudes vont à l'endroit des parents, collègues et camarades, pour les différents moyens et aides nécessaires qu'ils nous ont été apportés. Je citerai:
 \begin{itemize}
-	\item  {\footnotesize\bfseries Monsieur MBELAWADZAI Joseph }, statisticien, qui a été d'un immense soutien pendant toute la durée de rédaction de ce mémoire. Grâce à son expertise remarquable, il a été une grande source d'inspiration et de conseils. Son soutien, encouragement et pour avoir eu la patience de répondre à mes questions; 
 	\item  Mes parents, pour tout ce que vous faites dans ma vie;
-	\item {\footnotesize \bfseries T.D DIMITRI , N.Y.RICHEPIN, E.T ANTONIO,  B.P. CANISIUS, A.DIEUDONNE, KHALIL ABDEL-AZIZ, M.AMBARMA, H. SEINI,P.P. MARINELL,M.D.D THIERRY}, mes camardes de promotion, pour la collaboration et la discussion tout au long de ce travail. Vous êtes les meilleurs!!!;
-	\item  Mes petites s\oe urs et mes petits frères pour leurs convivialités et encouragements.
+	\item {\footnotesize \bfseries Ousmane H., A. LeBon, Ibrahim A., Layibe P. }, mes camardes de promotion, pour la collaboration et la discussion tout au long de ce travail. Vous êtes les meilleurs !;
+	\item   Mes frères et s\oe urs pour leurs convivialités et encouragements.
 \end{itemize}
-	
 
- 
+
