--- a/main_thesis.tex
+++ b/main_thesis.tex
@@ -2,9 +2,9 @@
 \addbibresource{library.bib}
 
 \begin{document}
-\titleThesis{TinyML for Bean Cooking Time Prediction}
+\titleThesis{Prédiction du temps de cuisson de haricots basée sur TinyML en utilisant des données de temps de cuisson et des images de haricots}
 
-\author{MBAIGOLMEM DANG-DANG THIERY \thanks{dev.thiery.dangdang@gmail.com}}
+\author{MBAIGOLMEM DANG-DANG THIERY}
 
 % % Matriculation Number
 % \id{20A179FS}
@@ -21,18 +21,25 @@
 
 % Submission Date
 % \date{08.09.2025}
-
+\input{content/mapage.tex}
 \maketitle
+
+\input{content/dedicace.tex}
+\input{content/remerciement.tex}
+\input{content/00-Abstract.tex}
+\input{content/resume.tex}
+
 \tableofcontents
 \listoffigures
 \listoftables
 
-\input{content/01-introduction} %% Ok Ici
-\input{content/review} 			%% Ok Ici
-\input{content/02-chapter1}		%% Ok Ici
-\input{content/03-chapter2}		%% Ok Ici
-\input{content/04-chapter3}		%% Ok Ici
-\input{content/10-conclusion} %% <- Probleme
+
+\input{content/01-introduction} 
+\input{content/review} 			
+\input{content/02-chapter1}		
+\input{content/03-chapter2}		
+\input{content/04-chapter3}		
+\input{content/10-conclusion} 
 
 \begin{appendix}
 	\input{content/99-appendix}
