--- a/content/mapage.tex
+++ b/content/mapage.tex
@@ -1,35 +1,87 @@
-\begin{titlepage}
-	\begin{tikzpicture}[remember picture,overlay]
-		\tikzset{
-			trait/.style={draw=blue!70!white,rounded corners,align=center,double,line width=7pt}}
-		\tikzset{
-			them/.style={draw=blue!70!black,line width=4pt,rounded corners,text justified, text width=0.75\linewidth,fill=white}}
-		\draw[trait,top color=green!80!cyan,bottom color=green!80!cyan](current page.north west) -- (current page.north east)--(current page.south east)--(current page.south west)--cycle;
+\thispagestyle{empty}
+
+% Bordure bleue discrète
+\begin{tikzpicture}[remember picture,overlay]
+	\draw[line width=1pt, color=blue!40!black, rounded corners=10pt]
+	($(current page.north west)+(.5cm,-.5cm)$) rectangle ($(current page.south east)+(-.5cm,.5cm)$);
+\end{tikzpicture}
+
+\vspace*{0.3cm}
+
+% En-tête en 3 colonnes : texte gauche, logos centre empilés, texte droite
+\vspace*{-4cm}
+\begin{center}
+	\setlength{\tabcolsep}{2pt}
+	\begin{tabular}[t]{p{0.3\linewidth} c p{0.3\linewidth}}
+		\parbox[t]{\linewidth}{
+			\raggedright
+			{\bfseries UNIVERSITE DE NGAOUNDERE} \newline
+			FACULTE DES SCIENCES \newline
+			Département de Mathématiques \newline
+			et Informatique
+		}
+		 & 
+		\begin{tabular}[t]{c}
+			\includegraphics[height=2.0cm]{figures/univ_logo.jpeg} \\[0.2cm]
+			\includegraphics[height=1.8cm]{figures/fac_logo.jpeg}
+		\end{tabular}
+		 & 
+		\parbox[t]{\linewidth}{
+			\raggedleft
+			{\bfseries THE UNIVERSITY OF NGAOUNDERE} \newline
+			FACULTY OF SCIENCE \newline
+			Department of Mathematics \newline
+			and Computer Science
+		}
+	\end{tabular}
+\end{center}
+
+\vspace{0.8cm}
+
+% Corps comme avant
+\begin{center}
+	{\bfseries\Large Mémoire de Master Recherche} \\[0.4cm]
+	Présenté en vue de l'obtention du diplôme de Master \\
+	en Ingénierie Informatique \\[0.35cm]
+	Option~: Systèmes et Logiciels en Environnements Distribués \\[1cm]
+	{\bfseries\large THÈME} \\[0.25cm]
+	\fbox{%
+		\parbox{0.85\linewidth}{%
+			\centering
+			\bfseries\Large Prédiction du temps de cuisson de haricots basée sur TinyML en utilisant des données de temps de cuisson et des images de haricots
+		}
 		
-		\node[yshift=-2cm,xshift=0.5cm](univ) at (current page.115){\normalsize{} \bfseries UNIVERSITE DE NGAOUNDERE};
-		\node[yshift=-2cm,xshift=5cm](univ) at (current page.110){\includegraphics[width=0.1\linewidth,height=1.5cm]{logou.png}};
-		\node[yshift=-3cm,xshift=0.5cm](fac) at (current page.115){\normalsize{} \bfseries FACULTE DES SCIENCES};
-		\node[yshift=-3.6cm,xshift=5cm](univ) at (current page.110){\includegraphics[width=0.05\linewidth,height=1cm]{logo.png}};
-		\node[yshift=-4cm,align=center](dep) at (current page.115){\hspace*{1cm}\normalsize{} \textbf{ Département de Mathématiques  }};
-		\node[yshift=-5cm,align=center](dep) at (current page.115){\hspace*{1cm}\normalsize{} \textbf{et Informatique }};
+	}
+\end{center}
+
+\begin{center}
+	\textbf{année académique : 2024-2025}
+\end{center}
+\vspace{-1cm}
+
+\begin{center}
+	{\bfseries Rédigé par~: MBAIGOLMEM DANG-DANG Thiery} \\
+	(Licencié en Ingénierie Informatique) \\
+	Matricule~: {\bfseries 20A179FS} \\[0.6cm]
+	Sous l'encadrement de~: \\[0.6cm]
+	
+	\setlength{\tabcolsep}{12pt} % espace entre colonnes
+	\small
+	\begin{tabular}{p{0.42\linewidth} p{0.42\linewidth}}
+		\centering
+		{\bfseries Pr. Dr.-Ing. JEAN LOUIS KEDIENG EBONGUE FENDJI} \\ 
+		\textbf{Maître de conférence}
+		 & 
+		\centering
+		{\bfseries Pr. Dr. Ing. BOUKAR OUSMAN}                     \\ 
+		\textbf{Maître de conférence}
 		
-		\node[yshift=-2cm,xshift=11cm](univa) at (current page.110){\normalsize{} \bfseries THE UNIVERSITY OF NGAOUNDERE};
-		\node[yshift=-3cm,xshift=11cm](faca) at (current page.110){\normalsize{} \bfseries FACULTY OF SCIENCE};
-		\node[yshift=-4cm,align=center,xshift=10.5cm](depa) at (current page.110){\hspace*{1cm}\normalsize{} \textbf{ Department of Mathematics }};
-		\node[yshift=-5cm,align=center,xshift=10.5cm](depa) at (current page.110){\hspace*{1cm}\normalsize{} \textbf{ and Computer Science }};
-		
-		
-		\node[yshift=-10cm,xshift=5cm,align=center](mem) at (current page.110){\bfseries{}\large{} Mémoire de Master Recherche};
-		\node[yshift=-11cm,xshift=5cm,align=center](pres) at (current page.110){{\bfseries Présenté en vue de l'obtention du dipl\^ome de Master}};
-		\node[yshift=-12cm,xshift=5cm,align=center](ment) at (current page.110){{\bfseries  en Ingénierie Mathématiques}};
-		\node[yshift=-13.2cm,xshift=5cm,align=center](ment) at (current page.110){{\bfseries  Option: Probabilité et Statistique}};
-		\node[yshift=-14.2cm,xshift=5cm,align=center](tith) at (current page.110){{\bfseries  THEME:}}; 
-		\node[them,yshift=-16cm,xshift=6cm](them) at (current page.110){{\bfseries \Large{} Techniques d'échantillonnage et enqu\^ete par sondage sur le choix des étudiantes vers les filières scientifiques ou technologiques:  cas de l'Université de Ngaoundéré, année académqiue $\mathbf{2023/2024}$ }}; 
-		\node[yshift=-19cm,xshift=5cm](redac) at (current page.110){{\bfseries Rédigé par: MBELAWADZAI Joseph }};
-		\node[yshift=-19.8cm,xshift=3.88cm](matr) at (current page.110){{\bfseries Matricule: $\mathbf{17A292FS}$ }};
-		
-		\node[yshift=-21cm,xshift=3.88cm](imp) at (current page.110){{\bfseries Sous l'encadrement de: }};
-		\node[yshift=-21.8cm,xshift=5cm](imp) at (current page.110){{\bfseries Dr MBOUNJA BESSEME FRITZ  }};
-		\node[yshift=-24.8cm,xshift=5cm](imp) at (current page.110){{ \shadowbox{\color{cyan!85!red}\bfseries \textcolor{black}{Septembre 2024}} }}; 
-	\end{tikzpicture}
-\end{titlepage}
+	\end{tabular}
+\end{center}
+
+
+\vfill
+
+\begin{center}
+	\shadowbox{\bfseries Septembre 2025}
+\end{center}
